--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-opendr>=0.76
-numpy>=1.11.0
+#opendr>=0.76
+numpy<1.24
 scipy>=0.19.0
 matplotlib==2.*
-h5py==2.7.*
+#h5py==2.7.*
 tqdm==4.*
 chumpy>=0.67
+opencv-python
+PyOpenGL
+pillow
+bottleneck
