--- a/environment.yaml
+++ b/environment.yaml
@@ -7,14 +7,16 @@ channels:
   - defaults
 dependencies:
   - blas=1.0=mkl
+  - bottleneck=1.3.5=py38h080aedc_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
+  - brotli-python=1.0.9=py38hd77b12b_7
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2023.12.12=haa95532_0
-  - click=8.1.7=py38haa95532_0
-  - cloudpickle=2.2.1=py38haa95532_0
+  - cffi=1.16.0=py38h2bbff1b_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - contourpy=1.0.5=py38h59b6b97_0
+  - cryptography=41.0.7=py38h89fc84f_0
   - cuda=11.8.0=0
   - cuda-cccl=11.8.89=0
   - cuda-command-line-tools=11.8.0=0
@@ -47,9 +49,6 @@ dependencies:
   - cuda-visual-tools=11.8.0=0
   - cudatoolkit=11.8.0=hd77b12b_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cytoolz=0.12.2=py38h2bbff1b_0
-  - dask-core=2023.4.1=py38haa95532_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=hdaf720e_2
   - fvcore=0.1.5.post20210915=py38
   - gettext=0.21.1=h5728263_0
@@ -57,15 +56,16 @@ dependencies:
   - glib-tools=2.78.3=h12be248_0
   - gst-plugins-base=1.22.8=h001b923_0
   - gstreamer=1.22.8=hb4038d2_0
+  - h5py=3.9.0=py38hfc34f40_0
+  - hdf5=1.12.1=h51c971a_3
+  - icc_rt=2022.1.0=h6049295_2
   - icu=73.2=h63175ca_0
-  - imageio=2.31.4=py38haa95532_0
-  - importlib-metadata=6.0.0=py38haa95532_0
+  - idna=3.4=py38haa95532_0
   - importlib_resources=6.1.1=py38haa95532_0
   - intel-openmp=2023.1.0=h59b6b97_46320
   - iopath=0.1.9=py38
   - kiwisolver=1.4.4=py38hd77b12b_0
   - krb5=1.21.2=heb0366b_0
-  - lazy_loader=0.3=py38haa95532_0
   - lcms2=2.16=h67d730c_0
   - lerc=4.0.0=h63175ca_0
   - libblas=3.9.0=1_h8933c1f_netlib
@@ -104,7 +104,6 @@ dependencies:
   - libxcb=1.15=hcd874cb_0
   - libxml2=2.12.3=hc3477c8_0
   - libzlib=1.2.13=hcfcfb64_5
-  - locket=1.0.0=py38haa95532_0
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
@@ -118,30 +117,35 @@ dependencies:
   - mkl_random=1.2.4=py38h59b6b97_0
   - msys2-conda-epoch=20160418=1
   - munkres=1.1.4=py_0
+  - ninja=1.10.2=haa95532_5
+  - ninja-base=1.10.2=h6d14046_5
   - nsight-compute=2022.3.0.22=0
-  - numpy-base=1.24.3=py38h8a87ada_1
+  - numpy-base=1.23.5=py38h46c4fa8_1
   - openjpeg=2.5.0=h3d672ee_3
   - openssl=3.2.0=hcfcfb64_1
   - packaging=23.1=py38haa95532_0
-  - partd=1.4.1=py38haa95532_0
   - pcre2=10.42=h0ff8eda_0
   - pip=23.3.1=py38haa95532_0
+  - platformdirs=3.10.0=py38haa95532_0
   - plotly=5.9.0=py38haa95532_0
   - ply=3.11=py38_0
+  - pooch=1.7.0=py38haa95532_0
   - portalocker=2.8.2=py38haa244fe_1
   - pthread-stubs=0.4=hcd874cb_1001
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopengl=3.1.1a1=py38haa95532_0
+  - pyopenssl=23.2.0=py38haa95532_0
   - pyparsing=3.0.9=py38haa95532_0
   - pyqt=5.15.10=py38hd77b12b_0
   - pyqt5-sip=12.13.0=py38h2bbff1b_0
+  - pysocks=1.7.1=py38haa95532_0
   - python=3.8.18=h1aa4202_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.8=2_cp38
-  - pywavelets=1.4.1=py38h2bbff1b_0
   - pywin32=306=py38hd3f51b4_2
   - pyyaml=6.0.1=py38h91455d4_1
   - qt-main=5.15.8=h9e85ed6_18
-  - scikit-image=0.20.0=py38h3513d60_0
-  - scipy=1.9.1=py38h91810f7_0
+  - scipy=1.10.1=py38hdcfc7df_1
   - setuptools=68.2.2=py38haa95532_0
   - sip=6.7.12=py38hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
@@ -150,10 +154,8 @@ dependencies:
   - tbb=2021.8.0=h59b6b97_0
   - tenacity=8.2.2=py38haa95532_0
   - termcolor=2.3.0=pyhd8ed1ab_0
-  - tifffile=2020.10.1=py38h8c2d366_2
   - tk=8.6.13=h5226925_1
   - tomli=2.0.1=py38haa95532_0
-  - toolz=0.12.0=py38haa95532_0
   - tornado=6.3.3=py38h2bbff1b_0
   - tqdm=4.66.1=pyhd8ed1ab_0
   - ucrt=10.0.22621.0=h57928b3_0
@@ -161,6 +163,7 @@ dependencies:
   - vc14_runtime=14.38.33130=h82b7239_18
   - vs2015_runtime=14.38.33130=hcb4865c_18
   - wheel=0.41.2=py38haa95532_0
+  - win_inet_pton=1.1.0=py38haa95532_0
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
   - xz=5.2.6=h8d14728_0
@@ -172,14 +175,18 @@ dependencies:
   - pip:
       - certifi==2022.12.7
       - charset-normalizer==2.1.1
+      - chumpy==0.71
+      - cython==3.0.7
       - filelock==3.9.0
+      - fonttools==4.47.0
       - fsspec==2023.4.0
-      - idna==3.4
       - jinja2==3.1.2
       - markupsafe==2.1.3
       - mpmath==1.3.0
       - networkx==3.0
       - numpy==1.24.1
+      - opencv-python==4.9.0.80
+      - opendr==0.73
       - pillow==9.3.0
       - requests==2.28.1
       - sympy==1.12
@@ -188,4 +195,7 @@ dependencies:
       - torchvision==0.16.2+cu118
       - typing-extensions==4.4.0
       - urllib3==1.26.13
+variables:
+  CUDA_HOME: C:\Users\justi\miniconda3\envs\videoavatars
+  CUDA_PATH: C:\Users\justi\miniconda3\envs\videoavatars
 prefix: C:\Users\justi\miniconda3\envs\videoavatars
